kubernetes/lab09-networkpolicy/intrus.yaml
apiVersion: v1
kind: Pod
metadata:
  name: intrus
  labels:
    app.kubernetes.io/name: intrus
    role: intrus
spec:
  containers:
    - name: busybox
      image: busybox:1.36
      imagePullPolicy: IfNotPresent
      command:
        - sleep
        - "86400"
      resources:
        requests:
          cpu: 25m
          memory: 32Mi
        limits:
          cpu: 100m
          memory: 64Mi
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        runAsUser: 65534
