kubernetes/lab09-networkpolicy/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  labels:
    app.kubernetes.io/name: deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
